# Setup for the NimbeLink cell package
#
# (C) NimbeLink Corp. 2021
#
# All rights reserved except as explicitly granted in the license agreement
# between NimbeLink Corp. and the designated licensee. No other use or disclosure
# of this software is permitted. Portions of this software may be subject to third
# party license terms as specified in this software, and such portions are
# excluded from the preceding copyright notice of NimbeLink Corp.

[metadata]
name = pynl-cell
version = 1.0.0
description = NimbeLink cell library
copyright = (C) NimbeLink Corp. 2021
author = Erik Johnson
author-email = erik.johnson@nimbelink.com
home-page = https://github.com/NimbeLink/pynl-cell

[options]
packages = find_namespace:
install_requires =
    pyserial >= 3.4
    pynl-base @ git+https://github.com/NimbeLink/pynl-base
